# SampledAttackDetection

./: .gitignore  Makefile  README.md  baseline.py  evaluate_sampling.py  evaluate_weights.py  initial_tests.ipynb  old_launch.json  paradigm_constant.json  paradigm_constants.json  pcap_to_csv.py  pyproject.toml  raylib_implementation.py  raylib_implementation_baseline.py  reinforcement_learning.ipynb  requirements.txt  rl.py  statistics.ipynb  statistics_calculations.py  windowed.py
data/: label_data.json
gymenvs/: GymSamplingEnv.py  __init__.py  explicit_registration.py
gymenvs/envs/: GymSamplingEnv.py  __init__.py
networking/: common_lingo.py  netfactories.py  readers.py  samplers.py
networking/datastructures/: flag_count.py  flow.py  flow_bytes.py  flowsession.py  packet_like.py  packet_time.py
networking/downstream_tasks/: deepnets.py
networking/tests/: profile_on_packet_received.py
sampleddetection/: common_lingo.py  datastructures.py  environments.py  readers.py  reward_signals.py  samplers.py  utils.py
sampleddetection/datastructures/: flag_count.py  flow.py  flowsession.py  packet_count.py  packet_like.py
sampleddetection/environment/: datastructures.py  model.py  models.py
sampleddetection/parsers/: oleg.py
sampleddetection/readers/: readers.py
sampleddetection/rl/: model.py
sampleddetection/samplers/: window_sampler.py
scripts/: cc2017_dataset_parser.py  ddos_detection.py  explore_pyshark.py  reorg_csv.py
test/: active.sh  conftest.py  inactive.sh  test_entireflow.py  test_negativestats.py  test_pickling.py  test_statistics.py
(+8 files in other folders)
